<resources>
    <string name="app_name">Grook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Login
    <string name="emailID">Enter Email ID</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="noAccount">Don’t have an account?</string>

    //SignUp
    <string name="signUp"><u>Sign Up</u></string>
    <string name="fullName">Enter your Full Name</string>
    <string name="cityResidence">Enter your city of residence</string>
    <string name="enterPhone">Enter your phone number</string>
    <string name="alreadyAccount">Already have a account?</string>
    <string name="createAccount">Create Account</string>
    <string name="loginText"><u>Login</u></string>
    <string name="tagLine">Grab your ideal ground</string>

    //Home
    <string name="homeHeading">Near You</string>
    <string name="homeSubHead">Sports grounds and facilities near you</string>
    <string name="groundBook">Book</string>
    <string name="groundSearch">Search by Ground Name</string>

    //Ground
    <string name="whenGoing">When are you going?*</string>
    <string name="whatPlaying">What are you playing?*</string>
    <string name="bookingOnly">*Bookings can only be made a week before</string>
    <string name="whichTime">Which time slot do you prefer?</string>
    <string name="subtotal">SUBTOTAL</string>
</resources>